--- a/site_media/custom/css/master.css
+++ b/site_media/custom/css/master.css
@@ -3,3 +3,5 @@
 .center{text-align:center;}
 footer .container{text-align:center;}
 #content{padding-top:60px;}
+ul.errorlist{display:inline;list-style:none;}
+ul.errorlist li{color:#B94A48;}
