--- a/site_media/custom/css/master.css
+++ b/site_media/custom/css/master.css
@@ -5,3 +5,5 @@ footer .container{text-align:center;}
 #content{padding-top:60px;}
 ul.errorlist{display:inline;list-style:none;}
 ul.errorlist li{color:#B94A48;}
+.topbar-menus li.dropdown{margin:0 1em;}
+.topbar .fill{border-bottom:2px solid #105Fb6;}
