--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,17 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
+{% if form.errors %}
+<div class='alerts'>
+    <div class='alert-message error fade in' data-alert='alert'>
+        <a href='#' class='close'>x</a>
+        <p>Invalid Login Information</p>
+    </div>
+</div>
+{% endif %}
 <form method='POST' action='{% url login %}'>{% csrf_token %}
 <input type='hidden' name='next' value="{{next}}"/>
 <div class='clearfix {% if form.email.errors %}error{% endif %}'>
-    <label for='id_email'>Email</label>
+    {{form.email.label_tag}}
     <div class='input'>
-        {{form.email}}{{form.email.errors}}
+        {{form.email}}{{form.email.errors.0}}
     </div>
 </div>
 <div class='clearfix {% if form.password.errors %}error{% endif %}'>
-    <label for='id_password'>Password</label>
+    {{form.password.label_tag}}
     <div class='input'>
-        {{form.password}}{{form.password.errors}}
+        {{form.password}}{{form.password.errors.0}}
     </div>
 </div>
 <div class='clearfix'>
@@ -21,4 +29,7 @@
 </div>
 </form>
 {% endblock %}
-{%block extrajs%}<script type='text/javascript'>document.forms[0].email.focus();</script>{%endblock%}
+{% block extrajs %}
+<script type='text/javascript' src='/site_media/thirdparty/bootstrap/js/bootstrap-alerts.js'></script>
+<script type='text/javascript'>$('#id_email').focus();</script>
+{% endblock %}
