--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     </div>
     <div class='container'>
         <div id='content'>
+        {% include 'messages.html' %}
         {% block content %}
         {% endblock %}
         </div>
