--- a/templates/header.html
+++ b/templates/header.html
@@ -35,10 +35,10 @@
 </ul>
 <ul class='nav secondary-nav topbar-menus'>
     {% if user.is_authenticated %}
-    <li><a href='/'>Welcome {{userprofile.name}}</a></li>
-    <li><a href='/logout/'>Logout</a></li>
+    <li><a href='/'>Welcome {{userprofile.name|title}}</a></li>
+    <li><a href='{% url logout %}'>Logout</a></li>
     {% else %}
-    <li><a href='/signup/'>SignUp</a></li>
-    <li><a href='/login/'>Login</a></li>
+    <li><a href='{% url signup %}'>SignUp</a></li>
+    <li><a href='{% url login %}'>Login</a></li>
     {% endif %}
 </ul>
